# pcc-2

./: CMakeLists.txt  README.md  README.txt  data_gen.py  install.sh  plot_gen.py  requirements.txt  run_tests.sh
include/: indexer.h  lzw.h  quicksort.h  searcher.h  suffix_array.h  utils.h
src/: indexer.cpp  lzw.cpp  main.cpp  quicksort.cpp  searcher.cpp  suffix_array.cpp  utils.cpp
